[gd_scene load_steps=6 format=3 uid="uid://cvnwf4i7oa545"]

[ext_resource type="Script" path="res://Scene/Map/2d/time/time.gd" id="1_bubiq"]
[ext_resource type="Texture2D" uid="uid://dd1lb0x2srs4y" path="res://Scene/Map/2d/time/background.png" id="1_pb0wq"]
[ext_resource type="Texture2D" uid="uid://ds04saronjm83" path="res://Scene/Map/2d/time/lineedittheme.png" id="2_nyaps"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50sqo"]
texture = ExtResource("2_nyaps")

[sub_resource type="Theme" id="Theme_m7a4b"]
LineEdit/styles/focus = SubResource("StyleBoxTexture_50sqo")
LineEdit/styles/normal = SubResource("StyleBoxTexture_50sqo")
LineEdit/styles/read_only = SubResource("StyleBoxTexture_50sqo")

[node name="time" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1000.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bubiq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_pb0wq")

[node name="timeMax" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 124.0
offset_top = 7.0
offset_right = 188.375
offset_bottom = 35.0
theme = SubResource("Theme_m7a4b")
text = "1000"
alignment = 1
max_length = 4

[node name="timeMin" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 45.0
offset_top = 7.0
offset_right = 109.375
offset_bottom = 35.0
theme = SubResource("Theme_m7a4b")
text = "0"
alignment = 1
max_length = 4

[connection signal="text_changed" from="TextureRect/timeMax" to="." method="_on_time_min_text_changed"]
[connection signal="text_changed" from="TextureRect/timeMin" to="." method="_on_time_max_text_changed"]
